# project_record

./: .gitignore
python_backend/: .mypy.ini  .pylintrc  pyproject.toml
python_backend/src/: main.py
python_backend/src/routers/: __init__.py  record.py
python_backend/src/schema/: __init__.py  common.py  request.py  response_model.py  table.py
python_backend/src/service/: __init__.py  record.py  user.py
python_backend/src/stores/: __init__.py  dynamo_db.py
