[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["William Leung <leungwilliamlun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
boto3 = "^1.34.29"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
